# viktorina

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.txt  mainWindow.cpp  mainWindow.h  questionaire.ui
